# kronix

./: AGENTS.md  article.md  audit.md  claude-session.jsonl  cmd.txt  deployed.txt  grant-application.md  ix_desc.md  readme.md  trigger_engine.md
.superstack/: idea-context.md  kronix-validation.html  validation1.html
chart_server/: .env.example  Cargo.toml
chart_server/migrations/: 0001_init_chart_tables.sql
chart_server/src/: index_engine.rs  ingestion.rs  live_aggregator.rs  main.rs  routes_chart.rs  ws.rs
contract/: Cargo.toml  notes.txt
contract/src/: constants.rs  entrypoint.rs  errors.rs  lib.rs  utils.rs
contract/src/instructions/: cancel_all_orders.rs  cancel_order.rs  cancel_order_by_client_id.rs  claim_fill.rs  create_market.rs  create_open_orders_account.rs  edit_order.rs  mod.rs  place_order.rs  place_take_order.rs  prune_orders.rs
contract/src/states/: market.rs  mod.rs  open_orders_account.rs
contract/src/states/orderbook/: book.rs  bookside.rs  bookside_iterators.rs  heap.rs  mod.rs  nodes.rs  order.rs  order_type.rs  ordertree.rs  ordertree_iterator.rs
contract/src/tests/: helper.rs  mod.rs
crates/margin_math/: Cargo.toml
crates/orderbook_program_cpi/: Cargo.toml
crates/risk_program_cpi/: Cargo.toml
crates/trigger_program_cpi/: Cargo.toml
crypto-exchange-frontend/: package.json  pnpm-lock.yaml
crypto-exchange-frontend/app/: globals.css  layout.tsx  page.tsx
crypto-exchange-frontend/components/: FeatureCard.tsx  Footer.tsx  Navbar.tsx  StatItem.tsx
crypto-exchange-frontend/lib/: HistoricData.tsx
keeper-bots/: .env.example  .gitignore  README.md  check-oracle.mts  get-oracle.ts  main.ts  package.json  pnpm-lock.yaml  tsconfig.json
kronix-frontend/: .gitignore  .vade-report  README.md  audit.md  package-lock.json  package.json  pnpm-lock.yaml
kronix-frontend/.data/: phoenix-strategies.json
kronix-frontend/app/: globals.css  layout.tsx  page.tsx
kronix-frontend/components/: Chart.tsx  ChartWrapper.tsx  FeatureCard.tsx  Features.tsx  Footer.tsx  Hero.tsx  InfrastructureStats.tsx  KXIBasket.tsx  Navbar.tsx  SectionLabel.tsx  StatItem.tsx  Strategies.tsx  Ticker.tsx  Trust.tsx
kronix-frontend/keeper-bots/: README.md  main.ts
kronix-frontend/keypairs/: id.json
kronix-frontend/lib/: api.ts  notifications.tsx  (+2 more)
landing-page/: landing-page.html
orderbook_program/: Cargo.toml  addons_cpi.txt  notes.txt  orderbook_architecture.txt  package-lock.json
risk_program/: Cargo.toml  package-lock.json  package.json
risk_program/clients/risk_program/: codama.mjs  package-lock.json  package.json
risk_program/idl/: risk_program.json
risk_program/src/: constants.rs  entrypoint.rs  errors.rs  helper.rs  lib.rs  math.rs  oracle.rs
risk_program/src/instructions/: add_margin.rs  close_position.rs  close_risk_market.rs  cover_bad_debt.rs  create_market.rs  create_risk_market.rs  deposit.rs  deposit_insurance.rs  initialize_insurance_fund.rs  initialize_vault.rs  liquidate.rs  mod.rs  open_position.rs  order_margin.rs  remove_margin.rs  settle_fill.rs  settle_funding.rs  update_funding_rate.rs  withdraw.rs
risk_program/src/state/: funding_state.rs  insurance_fund.rs  market_config.rs  mod.rs  oracle.rs  position.rs  user_account.rs
risk_program/src/tests/: client.rs  helper.rs  mod.rs
strategy_engine/: engine.md  error.md  evaluator.md  indicators.md  types.md
strategy_program/: Cargo.toml
trigger_program/: Cargo.toml
(+194 files in other folders)
