[package]
name = "chart_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
actix-web = "4"
actix-ws = "0.3"
actix-cors = "0.7"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "chrono", "rust_decimal"] }
rust_decimal = "1.33"
rust_decimal_macros = "1.33"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
thiserror = "1"
dashmap = "5"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json"] }
futures-util = "0.3"
tokio-util = "0.7"
base64 = "0.22"
once_cell = "1.19"
solana-sdk = "2.1.0" 
solana-pubkey = "2.1.0"