[package]
name = "orderbook"
version = "0.1.0"
edition = "2024"

[dependencies]
pinocchio = "0.10.2"
pinocchio-system = "0.5.0"
pinocchio-token = "0.5.0"
pinocchio-log = "0.5.1"
pinocchio-associated-token-account = "0.3.0"
pinocchio-pubkey = "0.3.0"
bytemuck = { version = "^1.7.2", features = ["derive", "min_const_generics"] }
num-derive = "0.4.2"
solana-clock = "3.0.1"
num_enum = "0.5.1"
pyth-solana-receiver-sdk = "1.1.0"