[package]
name = "risk_program"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
pinocchio = "0.10.2"
pinocchio-system = "0.5.0"
pinocchio-token = "0.5.0"
pinocchio-log = "0.5.1"
pinocchio-associated-token-account = "0.3.0"
pinocchio-pubkey = "0.3.0"
bytemuck = { version = "^1.7.2", features = ["derive", "min_const_generics"] }
num-derive = "0.4.2"
solana-clock = "3.0.1"
num_enum = "0.5.1"
shank = "0.4.8"
switchboard-on-demand = { version = "=0.10.3", features = ["pinocchio", "devnet"] }

[features]
devnet = []

[dev-dependencies]
rand = { version = "0.8", features = ["small_rng"] }
solana-sdk = "3.0.0"
litesvm = "0.9.1"
litesvm-token = "0.9.1"
solana-instruction = "3.1.0"
solana-keypair = "3.1.0"
solana-native-token = "3.0.0"
solana-pubkey = "4.1.0"
solana-signer = "3.0.0"
solana-transaction = "3.0.2"
solana-message = "3.0.1"
solana-sdk-ids = "3.1.0"
spl-token-2022 = { version = "10.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "8.0.0", features = [
    "no-entrypoint",
] }
solana-rpc-client = "3.1.9"
solana-address = "2.2.0"
solana-account = "4.1.0"
